--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -67,8 +67,12 @@
     &__inputs {
         // background-color: skyblue;
         display: grid;
-        grid-template-rows: repeat(4, 1fr);
+        grid-template-rows: repeat(4, 27px);
         grid-template-columns: repeat(4, 1fr);
+        grid-row-gap: 120px;
+        margin-top: 66px;
+        margin-left: 83px;
+        margin-right: 83px;
         justify-items: center;
         align-items: center;
     }
@@ -77,12 +81,14 @@
 .input {
     display:grid;
     grid-template-columns: [number-s] 26px [number-e input-s] 1fr [input-e];
+    grid-column-gap: 8px;
     font-family: 'Montserrat';
     text-align: center;
+    height: 47px;
 
     &__title {
         grid-column: input-s/input-e;
-        border-top: 1px solid #b3b3b3;
+        
         color: #b3b3b3;
         font-size: 12px;
         font-weight: 300;
@@ -93,7 +99,15 @@
         border: none;
         font-size: 15px;
         text-align: center;
-        
+        padding: 4px 0;
+        transition: all .3s ease;
+        border-bottom: 1px solid #b3b3b3;
+        margin-bottom:1px;
+        &:focus {
+            outline: none;
+            border-bottom: 1px solid rgb(0, 225, 247);
+        }
+
         // width: 190px;
         // height: 40px;
     }
@@ -106,5 +120,7 @@
         line-height: 24px;
         padding-top: 1px;
         border-radius: 50%;
+        height: 26px;
+        width: 26px;
     }
 }
