--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -10,6 +10,14 @@
     transform: translateY(50%);
 }
 
+.gray {
+    background: #b3b3b3;
+}
+
+.green {
+    background: #00CB79;
+}
+
 .home {
 
     background-color: rgba(207,207,207,.06);
@@ -157,7 +165,6 @@
 
     &__number {
         grid-column: number-s/number-e;
-        background-color: #00CB79;
         color: white;
         font-size: 20px;
         line-height: 24px;
